src/test/ui/traits/trait-upcasting/type-checking-test-1.stderr
error[E0605]: non-primitive cast: `&dyn Foo` as `&dyn Bar<i32>`
  --> $DIR/type-checking-test-1.rs:12:13
   |
LL |     let _ = x as &dyn Bar<i32>; // FIXME: OK, eventually
   |             ^^^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     let _ = &x as &dyn Bar<i32>; // FIXME: OK, eventually
   |             +

error[E0605]: non-primitive cast: `&dyn Foo` as `&dyn Bar<u32>`
  --> $DIR/type-checking-test-1.rs:15:13
   |
LL |     let _ = x as &dyn Bar<u32>; // FIXME: OK, eventually
   |             ^^^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     let _ = &x as &dyn Bar<u32>; // FIXME: OK, eventually
   |             +

error[E0277]: the trait bound `&dyn Foo: Bar<i32>` is not satisfied
  --> $DIR/type-checking-test-1.rs:12:13
   |
LL |     let _ = x as &dyn Bar<i32>; // FIXME: OK, eventually
   |             ^ the trait `Bar<i32>` is not implemented for `&dyn Foo`
   |
   = note: required for the cast to the object type `dyn Bar<i32>`

error[E0277]: the trait bound `&dyn Foo: Bar<u32>` is not satisfied
  --> $DIR/type-checking-test-1.rs:15:13
   |
LL |     let _ = x as &dyn Bar<u32>; // FIXME: OK, eventually
   |             ^ the trait `Bar<u32>` is not implemented for `&dyn Foo`
   |
   = note: required for the cast to the object type `dyn Bar<u32>`

error[E0605]: non-primitive cast: `&dyn Foo` as `&dyn Bar<_>`
  --> $DIR/type-checking-test-1.rs:21:13
   |
LL |     let _ = x as &dyn Bar<_>; // Ambiguous
   |             ^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     let _ = &x as &dyn Bar<_>; // Ambiguous
   |             +

error[E0277]: the trait bound `&dyn Foo: Bar<_>` is not satisfied
  --> $DIR/type-checking-test-1.rs:21:13
   |
LL |     let _ = x as &dyn Bar<_>; // Ambiguous
   |             ^ the trait `Bar<_>` is not implemented for `&dyn Foo`
   |
   = note: required for the cast to the object type `dyn Bar<_>`

error[E0605]: non-primitive cast: `&dyn Foo` as `&dyn Bar<u32>`
  --> $DIR/type-checking-test-1.rs:27:13
   |
LL |     let a = x as &dyn Bar<_>; // FIXME: OK, eventually
   |             ^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     let a = &x as &dyn Bar<_>; // FIXME: OK, eventually
   |             +

error[E0277]: the trait bound `&dyn Foo: Bar<u32>` is not satisfied
  --> $DIR/type-checking-test-1.rs:27:13
   |
LL |     let a = x as &dyn Bar<_>; // FIXME: OK, eventually
   |             ^ the trait `Bar<u32>` is not implemented for `&dyn Foo`
   |
   = note: required for the cast to the object type `dyn Bar<u32>`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0605.
For more information about an error, try `rustc --explain E0277`.
